# unnamed-sdvx-clone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Audio/: CMakeLists.txt
Audio/include/Audio/: Audio.hpp  AudioBase.hpp  AudioOutput.hpp  AudioStream.hpp  AudioStreamBase.hpp  Audio_Impl.hpp  DSP.hpp  Global.hpp  Sample.hpp
Audio/src/: Audio.cpp  AudioBase.cpp  AudioOutput_SDL.cpp  AudioStream.cpp  AudioStreamBase.cpp  AudioStream_mp3.cpp  AudioStream_ogg.cpp  AudioStream_wav.cpp  DSP.cpp  Sample.cpp  stdafx.cpp  stdafx.h
Audio/src/Windows/: AudioOutput_WASAPI.cpp
Beatmap/: CMakeLists.txt
Beatmap/include/Beatmap/: AudioEffects.hpp  Beatmap.hpp  BeatmapObjects.hpp  BeatmapPlayback.hpp  KShootMap.hpp  MapDatabase.hpp
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapObjects.cpp  BeatmapPlayback.cpp  Database.cpp  KShootMap.cpp  MapDatabase.cpp
GUI/: CMakeLists.txt
GUI/include/GUI/: Anchor.hpp  Button.hpp  Canvas.hpp  CommonGUIStyle.hpp  GUI.hpp  GUIAnimation.hpp  GUIElement.hpp  GUIRenderData.hpp  GUIRenderer.hpp  Label.hpp  LayoutBox.hpp  Panel.hpp  ScrollBox.hpp  SettingsBar.hpp  Slider.hpp  Spinner.hpp  TextInputField.hpp
GUI/src/: Anchor.cpp  Button.cpp  Canvas.cpp  CommonGUIStyle.cpp  GUIElement.cpp  GUIRenderer.cpp  Label.cpp  LayoutBox.cpp  Panel.cpp  ScrollBox.cpp  SettingsBar.cpp  Slider.cpp  Spinner.cpp  TextInputField.cpp  stdafx.h
Graphics/: CMakeLists.txt
Graphics/include/Graphics/: Font.hpp  Framebuffer.hpp  GL.hpp  Gamepad.hpp  Graphics.hpp  Image.hpp  ImageLoader.hpp  Keys.hpp  Material.hpp  Mesh.hpp  MeshGenerators.hpp  OpenGL.hpp  Particle.hpp  ParticleEmitter.hpp  ParticleParameter.hpp  ParticleParameters.hpp  ParticleSystem.hpp  RenderQueue.hpp  ResourceManagers.hpp  ResourceTypes.hpp  Shader.hpp  Texture.hpp  VertexFormat.hpp  Window.hpp  stdafx.h
Graphics/src/: Font.cpp  Framebuffer.cpp  Gamepad.cpp  Gamepad_Impl.cpp  Image.cpp  ImageLoader.cpp  Material.cpp  Mesh.cpp  MeshGenerators.cpp  OpenGL.cpp  Particle.cpp  ParticleSystem.cpp  RenderQueue.cpp  ResourceManagers.cpp  Shader.cpp  SpriteMap.cpp  Texture.cpp  VertexFormat.cpp  Window.cpp  stdafx.h
Graphics/src/Windows/: HBitmap.hpp
Main/: Application.cpp  Application.hpp  AsyncAssetLoader.cpp  AsyncAssetLoader.hpp  Background.cpp  Background.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  Global.hpp  Input.cpp  Input.hpp  LaserTrackBuilder.cpp  LaserTrackBuilder.hpp  Main.cpp  ScoreScreen.cpp  ScoreScreen.hpp  Scoring.cpp  Scoring.hpp  SettingsScreen.cpp  SettingsScreen.hpp  SongFilter.hpp  SongSelect.cpp  SongSelect.hpp  Test.cpp  TitleScreen.cpp  TitleScreen.hpp  Track.cpp  Track.hpp  TransitionScreen.cpp  TransitionScreen.hpp  stdafx.h
Main/Audio/: AudioPlayback.cpp  AudioPlayback.hpp
Main/GUI/: PerformanceGraph.cpp  PlayingSongInfo.cpp  PlayingSongInfo.hpp  SongSelectItem.cpp  SongSelectItem.hpp  SongSelectStyle.cpp  SongSelectStyle.hpp  SongSelectionWheel.hpp
Main/include/: Application.hpp  ApplicationTickable.hpp  AsyncAssetLoader.hpp  AsyncLoadable.hpp  Background.hpp  Game.hpp  GameConfig.hpp  Global.hpp  HitStat.hpp  LaserTrackBuilder.hpp  ScoreScreen.hpp  SettingsScreen.hpp  SongFilter.hpp  Test.hpp  TitleScreen.hpp  Track.hpp  TransitionScreen.hpp  stdafx.h
Main/include/Audio/: AudioPlayback.hpp
Main/include/GUI/: HealthGauge.hpp  PerformanceGraph.hpp  SongFilterSelection.hpp  SongSelectItem.hpp  SongSelectStyle.hpp  playingsonginfo.hpp
Main/src/: Application.cpp  ApplicationTickable.cpp  Camera.cpp  Game.cpp  GameConfig.cpp  HitStat.cpp  Input.cpp  LaserTrackBuilder.cpp  Resource.aps  ScoreScreen.cpp  Scoring.cpp  SettingsScreen.cpp  SongSelect.cpp  Test.cpp  TitleScreen.cpp  Track.cpp  TrackEffects.cpp  TransitionScreen.cpp  stdafx.cpp
Main/src/Audio/: AudioPlayback.cpp  GameAudioEffects.cpp
Main/src/GUI/: HealthGauge.cpp  SongFilterSelection.cpp  SongSelectItem.cpp  SongSelectionWheel.cpp
Online/: CMakeLists.txt
Online/include/Online/: Global.hpp  OnlineManager.hpp
Online/src/: OnlineManager.cpp  stdafx.cpp  stdafx.h
Shared/: CMakeLists.txt
Shared/include/Shared/: Action.hpp  BinaryStream.hpp  Bindable.hpp  Buffer.hpp  Color.hpp  Config.hpp  ConfigEntry.hpp  Delegate.hpp  Enum.hpp  File.hpp  FileStream.hpp  Files.hpp  Interpolation.hpp  Jobs.hpp  List.hpp  Log.hpp  Macro.hpp  Map.hpp  Margin.hpp  Math.hpp  MemoryStream.hpp  Path.hpp  Profiling.hpp  Rect.hpp  ResourceManager.hpp  Set.hpp  Shared.hpp  String.hpp  Thread.hpp  Timer.hpp  Transform.hpp  TypeInfo.hpp  Types.hpp  Unique.hpp  Utility.hpp  Vector.hpp  VectorMath.hpp
Shared/src/: BinaryStream.cpp  Buffer.cpp  Color.cpp  Config.cpp  ConfigEntry.cpp  FileStream.cpp  Interpolation.cpp  Jobs.cpp  Log.cpp  MemoryStream.cpp  Path.cpp  Random.cpp  String.cpp  TextStream.cpp  Transform.cpp  UTF8.cpp  stdafx.cpp  stdafx.h
Shared/src/Linux/: Files.cpp
Shared/src/MacOS/: File.cpp  Path.cpp  Thread.cpp
Shared/src/Windows/: Debug.cpp  File.cpp  Files.cpp  Path.cpp  Thread.cpp
Tests.Game/: CMakeLists.txt  GraphicsBase.cpp  Main.cpp  TestAudio.cpp  TestBeatmap.cpp  TestMusicPlayer.cpp  TestMusicPlayer.hpp
Tests.Shared/: CMakeLists.txt  TestCallbacks.cpp  TestEnum.cpp  TestFilesystem.cpp
Tests/include/Tests/: TestManager.hpp
Tests/src/: TestManager.cpp
